--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,53 @@
 #main {
     height: 100vh;
+    width: 100vw;
     overflow-x: hidden;
 }
 
-#main-adapted, #center-cont {
+#main-adapted,
+#center-cont {
     overflow-x: hidden;
     min-height: calc(100vh - 92px);
+    max-height: calc(100vh - 92px);
 }
 
 #login-brand {
     width: 80px;
     height: 80px;
+}
+
+/* Chat styles */
+.connected-dot,
+.disconnected-dot {
+    width: 8px;
+    height: 8px;
+    margin-bottom: 2px;
+    border-radius: 50%;
+    margin-right: 3px;
+    display: inline-block;
+}
+
+.connected-dot {
+    background-color: green;
+}
+
+.disconnected-dot {
+    background-color: red;
+}
+
+#left,
+#right {
+    overflow-x: hidden;
+    min-height: calc(100vh - 108px);
+    max-height: calc(100vh - 108px);
+}
+
+#messages {
+    min-height: calc(100vh - 225px);
+    max-height: calc(100vh - 225px);
+}
+
+#left,
+#messages {
+    overflow-y: auto;
 }
